Archive2/fa/e76ddf60fb638e/output
+ g++-4.9 -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -Wconversion -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:49:21: error: call of overloaded 'f(C&)' is ambiguous
     std::cout << f(c) << std::endl;
                     ^
main.cpp:49:21: note: candidates are:
main.cpp:29:6: note: decltype (f<T, (& T:: x)>(t, true)) f(const T&) [with T = C; decltype (f<T, (& T:: x)>(t, true)) = int]
 auto f(T const& t)
      ^
main.cpp:36:6: note: decltype (f<T, (& T:: y)>(t, 1)) f(const T&) [with T = C; decltype (f<T, (& T:: y)>(t, 1)) = int]
 auto f(T const& t)
      ^
